force-app/main/default/objects/Migration_Products_Serialized__c/fields/Canadian_Cost__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Cost__c</fullName>
    <label>Canadian Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>