force-app/main/default/objects/Migration_Products_Serialized__c/fields/Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Cost_Adjustment__c</fullName>
    <label>Cost Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>