force-app/main/default/objects/Migration_Products_Serialized__c/fields/Cost_Adjustment_Text__c.field-meta.xml
<CustomField>
    <fullName>Cost_Adjustment_Text__c</fullName>
    <label>Cost Adjustment Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>