force-app/main/default/objects/Migration_Products_Serialized__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <formula>Product__r.AcctSeed__Inventory_GL_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit</label>
    <type>Text</type>
</CustomField>