force-app/main/default/objects/Migration_Products_Serialized__c/fields/Inbound_Inventory_Movement__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Inventory_Movement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Inventory Movement</label>
    <referenceTo>AcctSeedERP__Inbound_Inventory_Movement__c</referenceTo>
    <relationshipLabel>Migrations Products Serialized</relationshipLabel>
    <relationshipName>Migrations_Products_Serialized</relationshipName>
    <type>Lookup</type>
</CustomField>