force-app/main/default/objects/Migration_Products_Serialized__c/fields/Insert_Lot__c.field-meta.xml
<CustomField>
    <fullName>Insert_Lot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insert Lot</label>
    <type>Checkbox</type>
</CustomField>