force-app/main/default/objects/Migration_Products_Serialized__c/fields/Inventory_Balance__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Balance</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Migrations Products Serialized</relationshipLabel>
    <relationshipName>Migrations_Products_Serialized</relationshipName>
    <type>Lookup</type>
</CustomField>