force-app/main/default/objects/Migration_Products_Serialized__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Location: Blank is Whitefish B is Barrie M is Montreal</inlineHelpText>
    <label>Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>