force-app/main/default/objects/Migration_Products_Serialized__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Migrations Products Serialized</relationshipLabel>
    <relationshipName>Migrations_Products_Serialized</relationshipName>
    <type>Lookup</type>
</CustomField>