force-app/main/default/objects/Migration_Products_Serialized__c/fields/Warehouse_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Lookup</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Migrations Products Serialized</relationshipLabel>
    <relationshipName>Migrations_Products_Serialized</relationshipName>
    <type>Lookup</type>
</CustomField>