force-app/main/default/objects/Migration_Products_Serialized__c/listViews/IBInsert.listView-meta.xml
<ListView>
    <fullName>IBInsert</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Product_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Canadian_Cost__c</columns>
    <columns>Location__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Inventory_Product__c</columns>
    <columns>Lot_Tracked__c</columns>
    <columns>Serialized__c</columns>
    <columns>Inventory_Balance__c</columns>
    <columns>Inbound_Inventory_Movement__c</columns>
    <columns>Warehouse_Lookup__c</columns>
    <columns>Location_Lookup__c</columns>
    <columns>Debit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Balance__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Inbound_Inventory_Movement__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Inventory_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Serialized__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>IB Insert</label>
    <language>en_US</language>
</ListView>