force-app/main/default/objects/Migration_Products_Serialized__c/listViews/Insert_Lots.listView-meta.xml
<ListView>
    <fullName>Insert_Lots</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Insert_Lot__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>Canadian_Cost__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Inventory_Product__c</columns>
    <columns>Lot_Tracked__c</columns>
    <columns>Serialized__c</columns>
    <columns>Inventory_Balance__c</columns>
    <columns>Inbound_Inventory_Movement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lot_Tracked__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Inventory_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Insert Lots</label>
    <language>en_US</language>
</ListView>