force-app/main/default/objects/Migration_Products_Serialized__c/listViews/lot2.listView-meta.xml
<ListView>
    <fullName>lot2</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Inventory_Product__c</columns>
    <columns>Lot_Tracked__c</columns>
    <columns>Lot__c</columns>
    <columns>Inventory_Balance__c</columns>
    <columns>Inbound_Inventory_Movement__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lot__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>lot2</label>
    <language>en_US</language>
</ListView>